fix(layout): fix shifted hearder on palnner, deployment tabs

--- a/src/app/feature-flag/notification-footer/feature-footer.component.less
+++ b/src/app/feature-flag/notification-footer/feature-footer.component.less
@@ -1,11 +1,9 @@
 @import (reference) '../../../assets/stylesheets/shared/osio.less';
 
 .feature-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background: transparent;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
 }
 
 .round-button(@color-for-feature) {
